@@ -52,8 +52,6 @@ unit_registry.load_definitions(os.path.join(path_core, "dmt_units.txt"))
 
 # helper for model equations and mcard memoization
 from .utils import print_progress_bar
-from .utils import flatten
-from .utils import strictly_increasing
 from .utils import enumerate_reversed
 from .utils import resolve_siunitx
 from .utils import tex_to_text
