@@ -13,10 +13,12 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 ### Move
 
 - Moved DMT.verilogae.helpers into DMT.external.verilogae. THis is more fitting.
+- Moved vectorize, check_nan_inf and memoize to extraction.model
 
 ### Removed
 
 - Removed DMT.core.tikz_postprocess. Currently no final implementation and also no integration with pyqtgraph. This feature will return with pyqtgraph integration and better documentation! No major bump as it was not part of test cases.
+- Removed is_iterable, flatten and strictly_increasing
 
 ## [1.3.0] - 2022.02.25
 
